--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     iOS请按照下面的教程下载
     </div>
     <div class="download-buttons">
-    <a href="https://www.yuanxiapi.cn/api/lanzou/?url=https://wwzs.lanzouj.com/iqEWy1l7h1ha&pwd=agpq&type=down" class="download-button ios" target="_blank">iOS下载</a>
+    <a href="https://4hhstq5.66wuc.com/ability/3gkg78p" class="download-button ios" target="_blank">iOS下载</a>
     </div>
     <img src="https://img13.360buyimg.com/ddimg/jfs/t1/230116/19/12641/250550/65a5ff21F85daab3f/dc86e109bdf28a14.png" class="app-image" alt="App Promo Image">
     
